--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="theme-color" content="#101622" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/pwa-192x192.png" />
+  <link rel="apple-touch-icon" href="/pwa-192x192.png" />
   <link rel="manifest" href="/manifest.json" />
   <title>PMMG Concursos</title>
 
