feat: Rebrand to Quadro de Acesso, add multi-select filters, and DB scripts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="/pwa-192x192.png" />
   <link rel="apple-touch-icon" href="/pwa-192x192.png" />
   <link rel="manifest" href="/manifest.json" />
-  <title>PMMG Concursos</title>
+  <title>QUADRO DE ACESSO</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
